--- a/autenticacao/templates/logar.html
+++ b/autenticacao/templates/logar.html
@@ -1,12 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logar</title>
-</head>
-<body>
-    <h1>logar</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block 'head' %}
+<link rel="stylesheet" href="{% static 'css/cadastro.css' %}">
+{% endblock %}
+PYSTACK WEEK 2.0 | Aula 1
+6{% block 'titulo' %}Cadastre-se{% endblock %}
+{% block 'body' %}
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-3 sidebar">
+<div class="logo_sidebar">
+<h2 class="logo">
+<img class="img_logo_sidebar" src="{% static 'image/logo.png' %}">IMOBI
+</h2>
+</div>
+<div class="corpo_sidebar">
+<div>
+<h2 class="titulo cor_branca">Logar</h2>
+</div>
+<div>
+<p class="cor_branca descricao">As melhores casas</p>
+<p style="margin-top:-20px" class="cor_branca descricao">Nos melhores preços</p>
+<br>
+<br>
+<a class="btn_logar" href="{% url 'cadastro' %}">Cadastre-se</a>
+</div>
+</div>
+</div>
+<div class="col-md-9">
+<div class="area_cadastrar">
+<h2 class="titulo_area_cadastrar">Logar</h2>
+{% if messages %}
+{% for message in messages %}
+<div class="alert {{message.tags}}">
+{{message}}
+</div>
+{% endfor %}
+{% endif %}
+<br>
+<br>
+<form method="POST" action="{% url 'logar' %}">{% csrf_token %}
+<input name="username" class="input_cadastrar input_cadastrar_email" type="text" placeholder="Username...">
+<br>
+<br>
+<input name="senha" class="input_cadastrar input_cadastrar_senha" type="password" placeholder="Senha...">
+<br>
+<input class="btn_cadastrar" type="submit" value="Logar">
+</form>
+</div>
+</div>
+</div>
+</div>
+{% endblock %}
