--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     {% if user.is_authenticated %}
       <nav class="navbar navbar-expand-lg navbar-dark bg_navbar">
         <a class="navbar-brand" href="{% url 'home' %}">
-					<img width="40" src="{% static 'autenticacao/img/logo.png' %}">
+					<img width="40" src="{% static 'image/house.png' %}">
 							&nbsp<h3 class="font_logo">IMOBI</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
 				 data-target="#navbarNav" aria-controls="navbarNav"
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="">Agendamento</a>
+              <a class="nav-link" href="{% url 'agendamentos' %}">Agendamento</a>
             </li>
           </ul>
         </div>
